<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:background="#009688"
        android:gravity="center"
        android:text="@string/introduzca_informacion_del_inmueble"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck,VisualLintBounds" />

    <EditText
        android:id="@+id/editTextCiudad"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_above="@id/btnCargarDocumento"

        android:autofillHints=""
        android:hint="@string/ingrese_la_ciudad"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.141"
        tools:ignore="MissingConstraints,UnknownId" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#009688"
        android:editable="false"
        android:text="@string/guardar"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUbicacion"
        app:layout_constraintVertical_bias="0.162"
        android:onClick="guardarInmueble"
        tools:ignore="Deprecated,VisualLintBounds" />

    <Button
        android:id="@+id/btnCargarDocumento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextCiudad"
        android:text="@string/cargar_documento"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.919"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCiudad"
        app:layout_constraintVertical_bias="0.049"
        android:onClick="cargarDocumento"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextAlquilado"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_above="@id/btnCargarDocumento"
        android:layout_marginEnd="18dp"
        android:autofillHints=""
        android:hint="@string/se_encuentra_alquilado"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btnCargarDocumento"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.041"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnCargarImagen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextCiudad"
        android:layout_marginEnd="206dp"
        android:text="@string/cargar_imagen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAlquilado"
        app:layout_constraintVertical_bias="0.157"

        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextNombre"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_above="@id/btnCargarDocumento"
        android:autofillHints=""
        android:hint="@string/ingrese_el_nombre_del_inmueble"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCargarImagen"
        app:layout_constraintVertical_bias="0.054"
        tools:ignore="MissingConstraints,DuplicateClickableBoundsCheck,VisualLintOverlap" />

    <EditText
        android:id="@+id/editTextUbicacion"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_above="@id/editTextNombre"
        android:autofillHints=""
        android:hint="@string/ingrese_la_ubicacion_del_inmueble"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.413"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCargarImagen"
        app:layout_constraintVertical_bias="0.19"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>